--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
           <div class="text-circle-main">
             <img
               class="bg-down-arrow panda"
-              src="assets/images/home-page/about.jpg"
+              src="assets/images/home-page/im.jpg"
               alt="bg-down-arrow"
             />
           </div>
@@ -848,22 +848,22 @@
       />
       <img
         class="client-img3"
-        src="assets/images/home-page/client-img3.jpg"
+        src="https://i.pinimg.com/736x/62/fd/57/62fd57f663a4a764218c9e1234300003.jpg"
         alt="client-img3"
       />
       <img
         class="client-img4"
-        src="assets/images/home-page/client-img4.jpg"
+        src="https://i.pinimg.com/736x/e0/f9/11/e0f9118e4bbefc5f00489f17a66eaa52.jpg"
         alt="client-img4"
       />
       <img
         class="client-img5"
-        src="assets/images/home-page/client-img5.jpg"
+        src="https://i.pinimg.com/736x/c3/15/5e/c3155e1199fb1263ebfcf67f89d15930.jpg"
         alt="client-img5"
       />
       <img
         class="client-img6"
-        src="assets/images/home-page/client-img6.jpg"
+        src="https://i.pinimg.com/736x/ce/f3/07/cef30765494a321cdc622d9bb911d103.jpg"
         alt="client-img6"
       />
     </section>
