--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
       <div class="container position-relative">
         <img
           class="robot"
-          src="assets/images/home-page/robot.jpg"
+          src="https://i.pinimg.com/736x/bc/84/e2/bc84e258eef86c6aa269dab2ed9379b9.jpg"
           alt="robot"
         />
         <video autoplay loop muted class="home-sec-two-video2">
